# room-b118

./: .cpplint.cfg  .gitignore  AUTHORS  CMakeLists.txt  README.md  TODO  build-perf.sh  build.sh  module-basic.cmake  module-frlap.cmake
examples/: CMakeLists.txt
frac-heat-equation/explicit-euler/: eeu
gffrnl-thesis-ppgmap-benchmarks/frlap-bench-701/: .gitignore  bench-701-params.cpp  bench-701.tex  compile.sh  main.cpp  plotconfig.sty  postprocess.sh
gffrnl-thesis-ppgmap-benchmarks/frlap-bench-701/latex/: huang_coef.tex
heat-equation/explicit-euler/: eeu.cpp
include/: CMakeLists.txt  module-basic.cmake  module-basic.cmake.old  module-frlap.cmake  module-linalg.cmake  prepend_path_to_files.cmake
include/b118/: almost_equal.hpp  frlap.hpp  linspace.hpp  numbers.hpp  type_traits.hpp
modules/: CMakeLists.txt
modules/base/: CMakeLists.txt
modules/base/b118/: almost_equal.hpp  linspace.hpp  utility.hpp
modules/base/examples/: CMakeLists.txt  example-linspace.cpp
modules/base/src/: b118-base.cpp
modules/core/: CMakeLists.txt
modules/core/include/b118/: almost_equal.hpp  closest_sorted.hpp  equal_within_ulps.hpp  fftw.hpp  grid.hpp  grid_function.hpp  linspace.hpp  numbers.hpp  type_traits.hpp  utility.hpp
modules/core/include/b118/fftw/: alloc.hpp  complex.hpp  complex_ptr.hpp  dft.hpp  free.hpp  managed.hpp  manager.hpp  plan.hpp
modules/core/tests/: test_fftw_manager.cpp
modules/core/tests/test-grid/: test-grid  test-grid.cpp
modules/frlap/: CMakeLists.txt
modules/frlap/b118/: frlap.hpp
modules/frlap/b118/frlap/: gdm.hpp
modules/frlap/b118/frlap/detail/: toep.h
modules/frlap/b118/frlap/gdm/: convolucao.hpp  strategy.hpp  trunc_uniform.hpp  trunc_uniform_fabio.hpp
modules/frlap/b118/frlap/gdm/strategies/: centered_3_point_periodized.hpp  gorenflo_mainardi.hpp  huang_oberman_linear.hpp  huang_oberman_quadratic.hpp  spectral.hpp  spectral_ooura.hpp  spectral_qawo.hpp  spectral_tanh_sinh.hpp
modules/frlap/benchmarks/b118-frlap-gdm-convergence-benchmark/: Calculator.hpp  ConvergenceBenchmark.hpp  Example  Example.cpp  Makefile  main.cpp
modules/frlap/benchmarks/b118-frlap-gdm-huang-oberman-2014-simple-benchmark/: Makefile  bench-701  main.cpp  simple_calculator.hpp
modules/frlap/examples/: CMakeLists.txt  example_huaob2_canonic.cpp
modules/frlap/include/b118/: frlap.hpp
modules/frlap/include/b118/frlap/: gdm.hpp  generalized_differences.hpp
modules/frlap/include/b118/frlap/gdm/: coefficients.hpp  convolucao.hpp  far_field.hpp  far_field_estimator.hpp  strategy.hpp  trunc_uniform.hpp  truncated_uniform.hpp
modules/frlap/include/b118/frlap/gdm/coefficients/: centered_3_point_periodized.hpp  cper3point.hpp  generator.hpp  gorenflo_mainardi.hpp  huang_oberman_1.hpp  huang_oberman_2.hpp  method.hpp  spectral.hpp  spectral_qawo.hpp
modules/frlap/include/b118/frlap/gdm/strategies_REMOVE/: gorenflo_mainardi.hpp  huang_oberman_linear.hpp  spectral.hpp  spectral_qawo.hpp  spectral_tanh_sinh.hpp
modules/frlap/include/b118/frlap/generalized_differences_methods/: far_field.hpp  far_field_estimator.hpp
modules/frlap/include/b118/frlap/generalized_differences_methods/coefficients/: centered_3_point_periodized.hpp  generator.hpp  gorenflo_mainardi.hpp  huang_oberman_1.hpp  huang_oberman_2.hpp  spectral.hpp  spectral_qawo.hpp
modules/frlap/miniapps/: CMakeLists.txt
modules/frlap/miniapps/b118/frlap/gdm/calculators/: simple.cpp  simple.hpp
modules/frlap/src/: fstp.cpp  toep.c
modules/frlap/src/gdm/strategies/: centered_3_point_periodized.cpp  gorenflo_mainardi.cpp  huang_oberman_linear.cpp  huang_oberman_quadratic.cpp  spectral.cpp  spectral_ooura.cpp  spectral_qawo.cpp  spectral_tanh_sinh.cpp
modules/frlap/src_REMOVE/: fstp.cpp
modules/frlap/src_REMOVE/gdm/strategies/: gorenflo_mainardi.cpp  huang_oberman.cpp  huang_oberman_linear.cpp  huang_oberman_quadratic.cpp  spectral_qawo.cpp
modules/frlap/test/test-coeffs/c3point/: c3point  main.cpp
modules/frlap/test/test-coeffs/gormai/: gormai  main.cpp
modules/frlap/test/test-coeffs/huob1/: huob1  main.cpp
modules/frlap/test/test-coeffs/huob2/: huob2  main.cpp
modules/frlap/test/test-coeffs/spec/: main.cpp  spec
modules/frlap/test/test-coeffs/spec_qawo/: main.cpp  spec_qawo
modules/frlap/teste_spectral/: compile.sh  teste_spectral_qawo  teste_spectral_qawo.cpp
modules/frlap/tests/: far_field_test.cpp
modules/linalg/: CMakeLists.txt
modules/linalg/b118/: conjugate_gradient.hpp  fsp.hpp  gradient_descent.hpp  linalg.hpp
modules/linalg/examples/: example.cpp
modules/linalg/include/b118/linalg/: matrix.hpp  matrix_kind.hpp  vector.hpp
modules/linalg/include/b118/linalg/matrix/: column.hpp  matrix.hpp  symmetric.hpp  symmetric_toeplitz.hpp
modules/linalg/include/b118/linalg/toeplitz/: fast_symm_toeplitz_prod.hpp  fast_symm_toeplitz_product.hpp  fstp.hpp  fstp_class.hpp  fsymmtp_manager.hpp
modules/linalg/include/b118/linalg/toeplitz/solvers/: durbin.hpp  levinson.hpp  trench.hpp
modules/linalg/references/: yule_walker_durbin_algorithm.odg
modules/linalg/tests/: CMakeLists.txt  test_durbin_golub_van_loan_3rd_ed.cpp  test_fast_symm_toeplitz_product.cpp  test_fsymmtp_manager.cpp  test_levinson_golub_van_loan_3rd_ed.cpp  test_trench_golub_van_loan_3rd_ed.cpp
modules/signal/: CMakeLists.txt
modules/signal/include/b118/signal/: convolution.hpp
studies/: conv1d.tex  convolucao.cpp
studies/coeffs_spectral/: coeffs_spectral.tex  cspectral  cspectral.cpp  cspectral.cpp~  gffrnl.sty
workspace/: .gitignore  far_field.hpp  generalized_differences.hpp  main.cpp
workspace-old/: generalized_differences.hpp  main.cpp  test  test.cpp
